# otter-finance-manager

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: docker-publish.yml
finances/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
finances/migrations/: 0001_initial.py  0002_expense_target_month.py  0003_alter_tag_unique_together.py  0004_income_months_per_year_and_more.py  0005_sitesettings.py  0006_expense_payer.py  0007_remove_expense_tags_userexpensetag.py
finances/templatetags/: finances_extras.py
otter_finance_manager/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/finances/: bucket_list.html  confirm_delete.html  dashboard.html  expense_list.html  form.html  goal_list.html  income_list.html  tag_list.html
templates/registration/: login.html
