[project]
name = "otter-finance-manager"
version = "0.1.0"
description = "Django webapp for shared and personal expense tracking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<5.2",
    "Babel>=2.12,<3",
    "django-money>=3.5",
    "py-moneyed<3",
    "gunicorn>=21,<22",
    "whitenoise>=6.5,<7",
    "dj-database-url>=1.0,<2",
    "psycopg2-binary>=2.9,<3",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.3,<5",
    "pytest>=8.3,<9",
    "pytest-django>=4.9,<5",
    "ruff>=0.7,<0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["otter_finance_manager"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
